Fix field title line spacing

--- a/bwma_rubik_style.scss
+++ b/bwma_rubik_style.scss
@@ -2670,7 +2670,6 @@ input.form-submit {
   .views-field-title p,
   .views-field-title h2 {
     text-align: center;
-    margin: 0;
   }
   .views-field-field-categories {
     font-weight: bold;
